@@ -8,6 +8,7 @@
 - JRUBY-3512: Treat LONGVARCHAR as a CLOB for Mssql
 - JRUBY-3624: Upgrade Derby to 10.5.3.0 and add native limit/offset
   support (Christopher Saunders)
+- JRUBY-3616: Fix postgres non-sequence primary keys (David Kellum)
 
 == 0.9.1
 
